# demo-ldap-api

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: api.py
app/models/: model_ldap.py
app/routers/: ldap.py
app/services/: service_ldap.py
docker/: Dockerfile
